--- a/BorusanBMW/BorusanBMW-Info.plist
+++ b/BorusanBMW/BorusanBMW-Info.plist
@@ -20,7 +20,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.chaos.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.mobyfact.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
