--- a/BorusanBMW/BorusanBMW-Info.plist
+++ b/BorusanBMW/BorusanBMW-Info.plist
@@ -35,6 +35,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UILaunchImageFile</key>
+	<string>Default</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
